# Iron-Man-Bot

./: .gitignore  README.md  pyproject.toml  schemas.sql
src/: example_config.py  iron-man.py  main.py
src/cogs/: admin.py  commands.py  error.py  events.py  music.py  tags.py
src/cogs/utils/: buttons.py  emote.py  help.py  paginitators.py
