[tool.poetry]
name = "iron-man-bot"
version = "0.1.0"
description = ""
authors = ["TierGamerpy"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git"}
requests = "^2.26.0"
aiohttp = "^3.7.4"
jishaku = "^2.3.0"
asyncpg = "^0.24.0"
psutil = "^5.8.0"
buttons = "^0.1.9"
"mystbin.py" = "^2.1.3"
colorama = "^0.4.4"
tortoise-orm = "^0.17.7"
aiodns = "^3.0.0"
wavelink = "^0.9.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
